Risoluzione segnalazioni sonar